syntax = "proto3";

package playfulbot.v0;

service PlayfulBot {
  rpc FollowPlayerGames (FollowPlayerGamesRequest) returns (stream FollowPlayerGamesResponse) {}
  rpc FollowGame (stream FollowGameRequest) returns (stream FollowGameResponse) {}
  rpc PlayGame (stream PlayGameRequest) returns (PlayGameResponse) {}
}

message Player {
  string id = 1;
}

message FollowPlayerGamesRequest {
  string player_id = 1;
}

message FollowPlayerGamesResponse {
  repeated string games = 1;
}

message Game {
  string id = 1;
  bool canceled = 2;
  int32 version = 3;
  repeated Player players = 4;
  string game_state = 5;
}

message GamePatch {
  string game_id = 1;
  int32 version = 2;
  string patch = 3;
}

message GameCanceled {
  string game_id = 1;
  int32 version = 2;
}

message PlayGameRequest {
  string game_id = 1;
  string player_id = 2;
  string action = 3;
  string data = 4;
}
message PlayGameResponse {}

message FollowGameRequest {
  string game_id = 1;
}

message FollowGameResponse {
  oneof game_or_update {
    Game game = 1;
    GamePatch patch = 2;
    GameCanceled canceled = 3;
  }
}
