// Original file: src/grpc/proto/playfulbot/v0/playfulbot_v0.proto


export interface PlayGameRequest {
  'gameId'?: (string);
  'playerId'?: (string);
  'action'?: (string);
  'data'?: (string);
}

export interface PlayGameRequest__Output {
  'gameId': (string);
  'playerId': (string);
  'action': (string);
  'data': (string);
}
